--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "tsc && node ./src/index.js",
+    "debug": "tsc && node --inspect ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Drachenfrucht1",
