--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Drachenfrucht1",
   "license": "MIT",
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "discord.js": "^11.5.1"
   },
   "devDependencies": {
