--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "tsc && npx cross-env NODE_ENV=development node ./src/index.js",
     "start": "npm run start:prod",
     "debug": "tsc && node --inspect ./src/index.js",
+    "lint": "eslint src/*.ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Drachenfrucht1",
@@ -23,6 +24,12 @@
   },
   "devDependencies": {
     "@types/node": "^12.0.10",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.2"
   }
 }
